[scss] add custom build script to handle .scss files
TODO:
- find all .scss files located in lib/

--- a/lib/cobalt_web/live/chat/chat_live.html.heex
+++ b/lib/cobalt_web/live/chat/chat_live.html.heex
@@ -1,3 +1,15 @@
-<h1>chat here </h1> 
-<button phx-click={"new-slug"}>Generate slug </button>
+<h1>chat here</h1>
+<button phx-click="new-slug">Generate slug</button>
 <%= @slug %>
+<div class="red">
+ this is red
+  <div class="green">
+    this is green
+    <div class="green--blue">
+      this is blue
+      
+    </div>
+  </div>
+</div>
+<p class="orange">this is orange</p>
+<p class="pink">this is pink</p>
