[scss] can use css module classes in heex templates
TODO:
- update `Utils.get_styles` to accept basename and resolve it
  to relative path

--- a/lib/cobalt_web/live/chat/chat.module.scss
+++ b/lib/cobalt_web/live/chat/chat.module.scss
@@ -1,3 +1,9 @@
+.container {
+  & p:last-of-type {
+    color: yellow;
+  }
+}
+
 .red {
     color: red;
 }
@@ -8,5 +14,9 @@
     &--blue {
       color: blue;
     }
+}
+
+.pink-color {
+  color: pink;
 }
 
