--- a/lib/cobalt_web/live/chat/chat_live.html.heex
+++ b/lib/cobalt_web/live/chat/chat_live.html.heex
@@ -1,15 +1,16 @@
 <h1>chat here</h1>
 <button phx-click="new-slug">Generate slug</button>
 <%= @slug %>
-<div class="red">
- this is red
-  <div class="green">
+<div class={@styles.red}>
+  this is red
+  <div class={@styles.green}>
     this is green
-    <div class="green--blue">
+    <div class={@styles."green--blue"}>
       this is blue
-      
     </div>
   </div>
 </div>
-<p class="orange">this is orange</p>
-<p class="pink">this is pink</p>
+<p class={@styles."pink-color"}>this is pink</p>
+<div class={@styles.container}>
+  <p>this is yellow because of container last-of-type</p>
+</div>
