--- a/lib/cobalt_web/live/chat/chat_live.html.heex
+++ b/lib/cobalt_web/live/chat/chat_live.html.heex
@@ -5,12 +5,12 @@
   this is red
   <div class={@styles.green}>
     this is green
-    <div class={@styles."green--blue"}>
+    <div class={@styles.greenBlue}>
       this is blue
     </div>
   </div>
 </div>
-<p class={@styles."pink-color"}>this is pink</p>
+<p class={@styles.pinkColor}>this is pink</p>
 <div class={@styles.container}>
   <p>this is yellow because of container last-of-type</p>
 </div>
